{{$NEXT}}

2.016     2014-10-11 21:46:09+02:00 Europe/Prague

Features:
* Feature 'number', value 'plu' (plural) changed to 'plur' to reflect the Universal Dependencies / Features.



2.015     2014-10-10 18:23:36+02:00 Europe/Prague

Drivers:
* DE::Stts
* DE::Conll
* DE::Conll2009
* MUL::Uposf

Fixes:
* Fixed a bug in Atom::list(). Previously, tags were taken from encode but not from decode map.
* FeatureStructure has new method get_ufeatures() for the universal features.



2.014     2014-10-06 22:10:01+02:00 Europe/Prague

Drivers:
* MUL::Upos

Interface:
* FeatureStructure has new methods set_upos() and get_upos() for the universal POS tags.



2.013     2014-10-04 22:40:48+02:00 Europe/Prague

Drivers:
* DA::Conll



2.012     2014-09-29 17:43:18+02:00 Europe/Prague

Fixes:
* Lingua::Interset::find_drivers() no longer fails if a subfolder of an %INC path is not readable.



2.011     2014-09-23 22:40:14+02:00 Europe/Prague

Drivers:
* CA::Conll2009
* ES::Conll2009



2.010     2014-08-15 20:14:29+02:00 Europe/Prague

Interface:
* New importable functions in the main package: find_tagsets() and hash_drivers().

Drivers:
* BN::Conll
* MUL::Google



2.009     2014-08-11 17:20:03+02:00 Europe/Prague

Features:
* New feature 'morphpos' (it existed in Interset 1 for sk::snk but it did not make it to Interset 2 so far).

Drivers:
* JA::Ipadic



2.008     2014-08-01 11:14:23+02:00 Europe/Prague

Drivers:
* BG::Conll



2.007     2014-07-25 14:01:06+02:00 Europe/Prague

Drivers:
* AR::Padt
* AR::Conll
* AR::Conll2007



2.006     2014-07-18 15:50:40+02:00 Europe/Prague

Interface:
* New methods for the 'other' feature: get_other_subfeature() and is_other().
* Fixed treatment of the 'other' feature in atoms.

Drivers:
* CS::Pmk
* CS::Pmkkr
* HR::Multext



2.005     2014-07-11 17:10:37+02:00 Europe/Prague

Interface:
* FeatureStructure method merge_hash() renamed to merge_hash_hard() and added new method merge_hash_soft().