@@ -110,8 +110,8 @@ sub _create_atoms
                                                                                                                     'dem' => 'SD',
                                                                                                                     'rel' => 'SR',
                                                                                                                     '@'   => 'S-' }},
-                                                                                        'adj'  => { 'prontype' => { ''    => { 'adjtype' => { 'art' => '--',
-                                                                                                                                              '@'   => 'A-' }},
+                                                                                        'adj'  => { 'prontype' => { ''    => 'A-',
+                                                                                                                    'art' => '--',
                                                                                                                     'dem' => 'SD',
                                                                                                                     'rel' => 'SR',
                                                                                                                     '@'   => 'S-' }},
