@@ -63,9 +63,9 @@ sub _create_atoms
                                                                                                          '@'   => 'n' }}}},
                                                      '@' => 'p' }},
                          'adj'  => { 'adjtype' => { 'det' => 'd',
-                                                    'art' => 'd',
                                                     'pdt' => 'd',
-                                                    '@'   => 'a' }},
+                                                    '@'   => { 'prontype' => { 'art' => 'd',
+                                                                               '@'   => 'a' }}}},
                          'num'  => { 'numform' => { 'digit' => 'z',
                                                     '@'     => { 'prontype' => { 'prn' => 'p',
                                                                                  '@'   => 'd' }}}},
@@ -94,7 +94,7 @@ sub _create_atoms
             # types of pronouns
             'personal'      => ['prontype' => 'prs'],
             'possessive'    => ['prontype' => 'prs', 'poss' => 'poss'],
-            'article'       => ['adjtype'  => 'art'], ###!!! Should this be a prontype???
+            'article'       => ['prontype' => 'art'],
             'demonstrative' => ['prontype' => 'dem'],
             'interrogative' => ['prontype' => 'int'],
             'indefinite'    => ['prontype' => 'ind'],
@@ -138,14 +138,14 @@ sub _create_atoms
                                                                                                         '@'    => { 'other/postype' => { 'currency' => 'currency' }}}}}}}},
                          'adj'  => { 'poss' => { 'poss' => 'possessive',
                                                  '@'    => { 'prontype' => { 'prs' => 'personal',
+                                                                             'art' => 'article',
                                                                              'dem' => 'demonstrative',
                                                                              'int' => 'interrogative',
                                                                              'ind' => 'indefinite',
                                                                              'rel' => { 'other/prontype' => { 'exc' => 'exclamative',
                                                                                                               '@'   => 'relative' }},
-                                                                             '@'   => { 'adjtype' => { 'art' => 'article',
-                                                                                                       '@'   => { 'numtype' => { 'ord' => 'ordinal',
-                                                                                                                                 '@'   => 'qualificative' }}}}}}}},
+                                                                             '@'   => { 'numtype' => { 'ord' => 'ordinal',
+                                                                                                       '@'   => 'qualificative' }}}}}},
                          'num'  => { 'numform' => { 'digit' => { 'other/postype' => { 'percentage' => 'percentage',
                                                                                       '@'          => '' }},
                                                     '@'     => 'numeral' }},
