@@ -72,8 +72,7 @@ around BUILDARGS => sub
                    'noun' => { 'prontype' => { ''  => { 'nountype' => { 'prop' => 'PROPN',
                                                                         '@'    => 'NOUN' }},
                                                '@' => 'PRON' }},
-                   'adj'  => { 'adjtype' => { 'art' => 'DET',
-                                              'det' => 'DET',
+                   'adj'  => { 'adjtype' => { 'det' => 'DET',
                                               'pdt' => 'DET',
                                               '@'   => { 'prontype' => { ''  => 'ADJ',
                                                                          '@' => 'DET' }}}},
